--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.stripe/stripe-java -->
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>24.2.0-beta.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
