--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/Fresh_Hive?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.username={db_username}
+spring.datasource.password={db_password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
